fixed text being invisible

--- a/css/main.css
+++ b/css/main.css
@@ -20,10 +20,12 @@ body {
 p {
   line-height: 1.5;
   margin: 30px 0;
+  color: #EAEAEA
 }
 h1,h2,h3,h4,h5,h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 800;
+  color: #2980b9
 }
 a {
   color: {{ site.link-col }};
